--- a/src/css/_large.scss
+++ b/src/css/_large.scss
@@ -45,7 +45,7 @@ header{
     border: 2px solid skyblue;
     width: 500px;
     height: 350px;
-    text-decoration: none;
+   
     margin-top: 10em;
 }
 
@@ -104,14 +104,12 @@ a{
     padding: 5px;
     background: white;
     border: 2px solid skyblue;
-    text-decoration: none;
-    text-decoration-style: none;
-    text-decoration-color: none;
+    
 }
 
 .month-popup div {
     padding: 0.3em;
-    text-decoration: none;
+    
     
 }
 
@@ -136,24 +134,22 @@ a{
 .week-day {
     text-align: center;
     height: 20px;
-}
-
-.week-day {
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
 }
+
+
 .day {
     font-size: 20px;
     padding: 10px;
     font-family: 'Roboto', sans-serif;
-}
-
-.day {
     cursor: pointer;
     width: 24px;
     height: 24px;
     line-height: 24px;
 }
+
+
 
 .current-day {
     background-color: #4285f4;
@@ -174,3 +170,150 @@ a{
 
 }
 // End cal1 -----------------------------------------------------------------------------------------------------------------------------------------
+
+
+// cal2 ---------------------------------------
+.cal2{
+    display: flex;
+    justify-content: center;
+    background-color:desaturate(#7750d3, 30);
+    height: 85.8vh;
+
+    .calendar-container {
+       background: #29323f;
+        width: 370px;
+        height: 500px;
+        padding: 20px;
+        margin-top: 10em;
+        box-shadow: 5px 10px 20px rgba(0,0,0,.6);
+        border-radius: 25px;
+    }
+    .calendar {
+        
+        border-spacing: 0;
+        border-collapse: collapse;
+        width: 100%;
+        margin-top: 20px;
+        
+        
+    }
+    .calendar-header {
+    
+        font-size: 1.6em;
+        font-family: 'Dosis', sans-serif;
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+        width: 320px;
+       background: #29323f;
+       color: desaturate(#7750d3, 30);
+       border-radius: 25px;
+    }
+    .displayMonth{
+        margin-left: 20px;
+        
+    }
+    .nav-month {
+  
+        font-size: 25px;
+        font-family: 'Dosis', sans-serif;
+        margin-right: 20px; 
+    }
+    a{
+        text-decoration: none;
+        font-size: 20px;
+        font-family: 'Dosis', sans-serif;
+        color: desaturate(#7750d3, 30);
+    }
+    .prev {
+       
+        cursor: pointer;
+        padding: 5px;
+    }
+    
+    .next {
+       
+        cursor: pointer;
+        padding: 5px;
+    }
+    .month-popup {
+        position: absolute;
+        padding: 5px;
+        background: #29323f;
+        box-shadow: 5px 10px 20px rgba(0,0,0,.6);
+        
+    }
+    
+    .month-popup div {
+        padding: 0.3em;
+        
+        
+    }
+    
+    .editor-year {
+        max-width: 3.6em;
+    }
+    
+    .label-month,
+    .label-year {
+        font-size: 20px;
+        font-family: 'Dosis', sans-serif;
+    }
+    
+    .label-month {
+        cursor: pointer;
+    }
+    .day,
+.empty-slot,
+.week-day {
+    text-align: center;
+    height: 20px;
+   
+}
+.week-day {
+    
+    font-size: 20px;
+    font-family: 'Dosis', sans-serif;
+    color: #999;
+}
+
+
+.day {
+    font-size: 18px;
+    padding: 10px;
+    font-family: 'Dosis', sans-serif;
+    cursor: pointer;
+    width: 25px;
+    height: 40px;
+    line-height: 40px;
+   color: rgb(192, 183, 183);
+    
+}
+
+.day:hover {
+    background-color:desaturate(#7750d3, 30);
+    border-radius: 0px;
+    color: rgb(192, 183, 183);
+}
+
+.current-day {
+    
+    width: 25px;
+    height: 25px;
+    
+    line-height: 25px;
+    
+    color: desaturate(#fcee6d, 30);
+}
+.selected-day {
+    background-color:desaturate(#7750d3, 30);
+    
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    border-radius:10px;
+    
+}
+}
+
+// End of cal2 -----------------------------------------------------------------------------------------------------------------------------------------
